# ChangeLog for media-libs/freeglut
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freeglut/ChangeLog,v 1.64 2009/12/04 20:44:27 aballier Exp $

  04 Dec 2009; Alexis Ballier <aballier@gentoo.org> freeglut-2.6.0.ebuild:
  Restore bsd joystick patch... still needed and silently dropped again.

*freeglut-2.6.0 (30 Nov 2009)

  30 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/2.6.0-GFX_radeon.patch, -freeglut-2.6.0_rc1.ebuild,
  +freeglut-2.6.0.ebuild, -files/freeglut-2.6.0_rc1-bsd_joystick.patch,
  metadata.xml:
  Version bump. Per bug #295163. Thx to bug reporter for the patches.

  11 Oct 2009; nixnut <nixnut@gentoo.org> freeglut-2.6.0_rc1.ebuild:
  revert to ~ppc #287229

  11 Oct 2009; nixnut <nixnut@gentoo.org> freeglut-2.6.0_rc1.ebuild:
  ppc stable #282290

  09 Oct 2009; Markus Meier <maekke@gentoo.org> freeglut-2.6.0_rc1.ebuild:
  revert back to ~arm, as suggested by ssuominen

  09 Oct 2009; Markus Meier <maekke@gentoo.org> freeglut-2.6.0_rc1.ebuild:
  arm stable, bug #282290

  01 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  freeglut-2.6.0_rc1.ebuild:
  Revert back to ~amd64 wrt #287229.

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  freeglut-2.6.0_rc1.ebuild:
  amd64 stable wrt #282290

  20 Sep 2009; Alexis Ballier <aballier@gentoo.org>
  freeglut-2.6.0_rc1.ebuild, +files/freeglut-2.6.0_rc1-bsd_joystick.patch:
  Restore still needed bsd fix and add a new one due to recent changes,
  submitted upstream

*freeglut-2.6.0_rc1 (21 Aug 2009)

  21 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +freeglut-2.6.0_rc1.ebuild:
  Version bump.

*freeglut-2.4.0-r2 (21 Aug 2009)

  21 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +freeglut-2.4.0-r2.ebuild:
  Fix croscompilation per bug #267584.

  08 Aug 2008; Alexis Ballier <aballier@gentoo.org>
  +files/freeglut-2.4.0-bsd-usb-joystick.patch, freeglut-2.4.0-r1.ebuild: