@@ -6,8 +6,8 @@ AUX freeglut-gcc42.patch 283 RMD160 d0fa7fa4828d2ab8e554ce30f72b5af4a92b9e14 SHA
 DIST freeglut-2.4.0.tar.gz 469557 RMD160 77465647f3d65fbb5cf253eb93ac7409e0c37b14 SHA1 91a528aa72758b7288a0d69a964b1b7e3f322a12 SHA256 269f2d50ba30b381622eb36f20b552ad43a1b43d544b9075e484e7146e81b052
 DIST freeglut-2.6.0-mpx-r6.patch 13696 RMD160 c6a4fa56c512b3e3d4179e00a531e7e90582ec28 SHA1 a2f09fa5fdd0877fb1bbdcbc80f0b7d8ad61df17 SHA256 e2936ce3cb4af219871806004d30f46d7fa9da77f66208203d566bae9e48bb5c
 DIST freeglut-2.6.0.tar.gz 1124186 RMD160 43bdb1a6d99445ee09370930ec6bc0f8310e7fcf SHA1 68306c4486c13d005a4e4d54035e0c0b1bdc220b SHA256 615b41edc96c405ee6bb7e9a2942642140c3e57c1dd8c68e968a17ddfb59e98f
-EBUILD freeglut-2.4.0-r1.ebuild 1711 RMD160 dbd100653d126dab63548ce0ed30865f70f7e0cf SHA1 82e869de543ff606131fcaee3cae598388551824 SHA256 dedad43a7f04ba373386337df791ee53dc305c39ac97e59c41f9d91dd70a8011
-EBUILD freeglut-2.4.0-r2.ebuild 1768 RMD160 8a796ce794f4a63508cc2cf7d77fca22bc7a61dd SHA1 c92358a34e1c84a0ac2fff6a04c2d013c03e93dc SHA256 3a9a3a2466c20e060b9d75b0f54d7417aa9c3d94e6723856871d695a7da3cc09
-EBUILD freeglut-2.6.0.ebuild 1445 RMD160 548eeef729ee419bc563b722a6824c1b074a3b81 SHA1 37ad208de435bc21012a91055a54e9046cce3f14 SHA256 d075aebd4863def972b29ada4ea1c67db416d93e3861ea12d753117ced00a0ab
-MISC ChangeLog 8245 RMD160 a4b3ba93543067df9fb1f6f51c5fc1d54483b56b SHA1 af46e8cfff9073f91523cbf4a50c621c67c00fce SHA256 ca96164797cd0f861856caf1dee383104a3c14f3572651c4314a7adaaef32b91
+EBUILD freeglut-2.4.0-r1.ebuild 1709 RMD160 ac3429a4251f22d59cdd95426fdec7eb86bdd7ab SHA1 652533a1a58d843c5e22a04ed1bc33e1e48bcb14 SHA256 0180b3479a2ec3fe1d53c0511cc09191f739c8a7af19ab2a4436fd6991e9d244
+EBUILD freeglut-2.4.0-r2.ebuild 1763 RMD160 55c5dbe3c418d4ac566b5f265a1f29c3add81d91 SHA1 73f046c4384f182cd10fa26895ee53b249b1a7fe SHA256 bc53d361bf12f1055aa295af98bcc64efbd82d8b87951ac5c6bd160e9b91f120
+EBUILD freeglut-2.6.0.ebuild 1441 RMD160 ec9d295152cb57d5a31cde4ea613043058ab2b16 SHA1 791b67894b45de541ff082a1fbf1f59bcbe21fe0 SHA256 4c7e0e0bde9cd5d7fc9195d9800b77b983e8fa8ecb114bded71a691283acc315
+MISC ChangeLog 8390 RMD160 83b027d46d45880dd76f1b383c71c42acbce4a49 SHA1 88d07239555a786fc7a46cdc7604c8ead9455620 SHA256 05a42b53c018cc1c0b5b9ecb29e0d59f1c0b70637929be23f2de603d1e853d77
 MISC metadata.xml 547 RMD160 aca9d5b8a53da9ad98263a30fafdadb0f97cf368 SHA1 2b890cdc7b0ad39313851f4794e7d04cf360fcd9 SHA256 f20911324f4b6374ced9986fae7cfa7f2bf3041817042a8db923f7e4bcf65b96
