@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freeglut/freeglut-2.4.0-r1.ebuild,v 1.14 2008/11/30 09:34:32 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freeglut/freeglut-2.4.0-r1.ebuild,v 1.15 2009/12/14 11:49:26 remi Exp $
 
 inherit eutils flag-o-matic libtool
 
@@ -8,7 +8,7 @@ DESCRIPTION="A completely OpenSourced alternative to the OpenGL Utility Toolkit 
 HOMEPAGE="http://freeglut.sourceforge.net/"
 SRC_URI="mirror://sourceforge/freeglut/${P}.tar.gz"
 
-LICENSE="X11"
+LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE=""
